--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <li class="navigation__li"><a href="https://github.com/Insert-Cod4" target='_blank'
                         class="navigation__A navigation__icon navigation--style2 navigation--gg fa-github"><span
                             class="navigation__label">Git</span></a></li>
-                <li class="navigation__li"><a href="mailto:afloresestrada4@gmail.com"
+                <li class="navigation__li"><a href="mailto:ArnulfDev@outlook.com"
                         class="navigation__A navigation__icon navigation--style2 fa-envelope"><span
                             class="navigation__label">Email</span></a></li>
             </ul>
